Reorganize example packages (yarn auto)

--- a/example/package.json
+++ b/example/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "gatsby": "^2.18.8",
+    "gatsby-plugin-parent-resolvers": "^1.0.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "gatsby-plugin-parent-resolvers": "^1.0.0"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
